Fix nav display z-index

--- a/src/Layout/Nav.module.css
+++ b/src/Layout/Nav.module.css
@@ -28,8 +28,10 @@
 
 .nav{
   min-width: 100vw ;
+  min-height: 100vh;
   position: absolute;
   background-color: rgba(255, 255, 255, 0.866);
+  z-index: 99;
 }
 
 .xlNav {
@@ -72,6 +74,7 @@
     margin: 0 auto;
     padding: 1.15rem 1.2rem;
     background-color:#E6F5E5 ;
+    z-index: 99;
   }
   .xlNavList{
     display: flex;
